cmake_minimum_required(VERSION 3.0)
project(MD5-checksum)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
find_package(OpenSSL REQUIRED)
add_executable(MD5-checksum main.cpp)
target_link_libraries(MD5-checksum PRIVATE OpenSSL::SSL)
target_include_directories(MD5-checksum PRIVATE ${OPENSSL_INCLUDE_DIR})